Ready to turn in

--- a/class/hw6/q2.ipynb
+++ b/class/hw6/q2.ipynb
@@ -248,10 +248,7 @@
     "                             template_Ix,\n",
     "                             template_Iy)).T\n",
     "    \n",
-    "    # Get the Hessian (note that the transpose order is opposite of\n",
-    "    # the paper, that's because grad_T_dWdp was naturally a big row,\n",
-    "    # and so big row @ big column = the 6x6 we want). Doing pinv for\n",
-    "    # robustness\n",
+    "    # Get the Hessian. Doing pinv for robustness\n",
     "    hessian = grad_T_dWdp.T @ grad_T_dWdp\n",
     "    inv_hessian = np.linalg.pinv(hessian)\n",
     "\n",
